evol(Spring): Ajouts des endpoints pour produit
