# back/fitmarket/src/main/resources/swagger/fitmarketapi.yml
@@ -1,4 +1,4 @@
-openapi: '3.0.0'
+openapi: 3.0.0
 x-stoplight:
   id: b52es8xrbv2qa
 info:
@@ -9,15 +9,14 @@ servers:
 paths: {}
 components:
   schemas:
-    Utilisateur:
-      title: Utilisateur
+    Member:
+      title: User
       type: object
       examples:
         - id: 142
           firstName: Alice
           lastName: Smith
           email: alice.smith@gmail.com
-          dateOfBirth: '1997-10-31'
           emailVerified: true
           signUpDate: '2019-08-24'
       x-stoplight:
@@ -27,11 +26,11 @@ components:
           type: integer
           x-stoplight:
             id: xoxy11r0lboui
-        nom:
+        lastname:
           type: string
           x-stoplight:
             id: 2g715lturpgdh
-        prenom:
+        firstname:
           type: string
           x-stoplight:
             id: sqo2ar7vrw5lz
@@ -39,16 +38,13 @@ components:
           type: string
           x-stoplight:
             id: pjy5otrn2hn1j
-        motsDePasse:
+        password:
           type: string
           x-stoplight:
             id: pe0yihh1uqssl
-        dateNaissance:
-          type: string
-          x-stoplight:
-            id: btqoyemztq91x
-    Commentaire:
-      title: Commentaire
+      description: ''
+    Comment:
+      title: Comment
       x-stoplight:
         id: ioqe915vcp7pf
       type: object
@@ -57,11 +53,11 @@ components:
           type: integer
           x-stoplight:
             id: 3dcogxhsjox42
-        contenu:
+        content:
           type: string
           x-stoplight:
             id: sa2iyul3zc2ir
-        dateHeure:
+        date_time:
           type: string
           x-stoplight:
             id: 2n5j7mpx5ff9y
@@ -77,16 +73,20 @@ components:
           type: integer
           x-stoplight:
             id: oyxinm7ts4p5t
-        produit:
-          $ref: '#/components/schemas/Produit'
+        product:
+          $ref: '#/components/schemas/Product'
           x-stoplight:
             id: yllkgs3x727f8
-        utilisateur:
-          $ref: '#/components/schemas/Utilisateur'
+        user:
+          $ref: '#/components/schemas/Member'
           x-stoplight:
             id: jrumut1nfda0a
-    Produit:
-      title: Produit
+        title:
+          type: string
+          x-stoplight:
+            id: cik2ukm86pnq5
+    Product:
+      title: Product
       x-stoplight:
         id: hl7nec5fwdmyy
       type: object
@@ -95,40 +95,40 @@ components:
           type: integer
           x-stoplight:
             id: ubbx8dn0fn09x
-        prix:
+        price:
           type: integer
           x-stoplight:
             id: dqxxaor5md129
-        image:
-          type: string
+        images:
+          type: array
           x-stoplight:
             id: tdpmgwbekc7y3
+          items:
+            x-stoplight:
+              id: qobasavfbjyi5
+            type: string
         description:
           type: string
           x-stoplight:
             id: mj1cokug4sep7
-        categorie:
+        category:
+          $ref: '#/components/schemas/Category'
           x-stoplight:
             id: zblfwcg4xsigk
-          enum:
-            - MATERIEL
-            - VETEMENT
-            - COURS
-            - NUTRITION
-        titre:
+        title:
           type: string
           x-stoplight:
             id: jzgbnuypucaoo
-        commandes:
+        orders:
           x-stoplight:
             id: n2gs19q84uzu2
           type: array
           items:
-            $ref: '#/components/schemas/Commande'
+            $ref: '#/components/schemas/Order'
             x-stoplight:
               id: 0kkdly561v34e
-    Cours:
-      title: Cours
+    Classes:
+      title: Classes
       x-stoplight:
         id: sa3zc31rlfko2
       type: object
@@ -137,11 +137,11 @@ components:
           type: integer
           x-stoplight:
             id: x8y9s98d8j3jl
-        produit:
-          $ref: '#/components/schemas/Produit'
+        product:
+          $ref: '#/components/schemas/Product'
           x-stoplight:
             id: dhukmpf9iwoxw
-        nom:
+        name:
           type: string
           x-stoplight:
             id: 7w58sgc0lmumf
@@ -149,24 +149,20 @@ components:
           type: string
           x-stoplight:
             id: ub19yq6enqwy4
-        description:
-          type: string
-          x-stoplight:
-            id: 5oy1umyu0gfex
-        joursHeures:
+        day_time:
           type: string
           x-stoplight:
             id: 2jfb4vusoalke
-        duree:
+        duration:
           type: integer
           x-stoplight:
             id: r65y4564olfx3
-        adresse:
+        address:
           type: string
           x-stoplight:
             id: qcbo8u7fjawwg
-    Commande:
-      title: Commande
+    Order:
+      title: Order
       x-stoplight:
         id: 1dpo669joyree
       type: object
@@ -175,22 +171,53 @@ components:
           type: integer
           x-stoplight:
             id: t7h9qy1zuy5ye
-        dateCommande:
+        dateOrder:
           type: string
           x-stoplight:
             id: v1bb6nst0vp6a
-        utilisateur:
-          $ref: '#/components/schemas/Utilisateur'
+        user:
+          $ref: '#/components/schemas/Member'
           x-stoplight:
             id: drinky91o77m9
-        produits:
+        products:
           type: array
           x-stoplight:
             id: pb09yw4ucngcx
           items:
-            $ref: '#/components/schemas/Produit'
+            $ref: '#/components/schemas/OrderProduct'
             x-stoplight:
               id: 9mzq97bkzai6q
+    OrderProduct:
+      title: OrderProduct
+      x-stoplight:
+        id: c6qeumomwlegc
+      type: object
+      properties:
+        id:
+          type: string
+          x-stoplight:
+            id: 347lpztzmym93
+        order:
+          $ref: '#/components/schemas/Order'
+          x-stoplight:
+            id: niaqs0u0e98gi
+        product:
+          $ref: '#/components/schemas/Product'
+          x-stoplight:
+            id: h9oni8ijhnq63
+        quantity:
+          type: integer
+          x-stoplight:
+            id: 44che7j6g22hx
+    Category:
+      title: Category
+      x-stoplight:
+        id: yecc2kc7ftvpa
+      enum:
+        - equipment
+        - clothes
+        - classes
+        - nutrition
     Error:
       type: object
       title: Error
@@ -199,3 +226,4 @@ components:
           type: string
         description:
           type: string
+
